k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-city
  labels:
    name: smart-city
    environment: production
